--- a/chickenBurger-page.html
+++ b/chickenBurger-page.html
@@ -5,7 +5,218 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="chickenBurger-page.css">
+
+    <style>
+        
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #c62828; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%; /* Full viewport height */
+}
+
+.app {
+    width: 100%;
+    height: 100vh; /* Full phone screen height */
+    background-color: #c62828; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    position: relative;
+}
+
+/* Header Styles */
+.header {
+    width: 100%;
+    height: 60px; /* Fixed height for header */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+    color: white;
+    box-sizing: border-box;
+}
+
+.header .back-icon,
+.header .cart-icon {
+    font-size: 20px;
+    cursor: pointer;
+}
+
+/* Image Container */
+.image-container {
+    position: absolute;
+    top: 40px; /* Adjusts the height placement */
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 2; /* Ensures the image is above the red background but behind the text */
+}
+
+.food-image {
+    width: 400px; 
+    max-width: 400px; 
+    height: 350px; 
+    max-height: 350px;
+    object-fit: contain;
+}
+
+.food-card {
+    background-color: white;
+    width: 100%; /* Full phone width */
+    height: 66%; /* Covers 2/3 of the screen */
+    border-radius: 50px 50px 0 0; /* Rounded corners at the top */
+    padding: 20px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    bottom: 0; /* Sticks the card to the bottom */
+    z-index: 1; /* Keeps the card below the image */
+}
+
+/* Food Card Content */
+.food-card h3 {
+    font-size: 30px;
+    padding-left: 20px;
+    margin: 60px 0 0; /* Adds extra spacing to prevent overlap with the image */
+}
+
+/* Align rating and delivery time in a single row */
+.info {
+    display: flex; /* Align items horizontally */
+    justify-content: space-between; /* Add space between items */
+    align-items: center; /* Vertically align items */
+    margin: 10px 0; /* Optional: Add spacing around */
+}
+
+.rating {
+    font-size: 14px;
+    color: #838383; /* Text color */
+    padding-left: 10px;
+}
+
+.delivery-time {
+    font-size: 14px;
+    color: #838383; /* Text color */
+    padding-right: 10px;
+}
+
+.rating i,
+.delivery-time i {
+    color: #FFC800; /* Icon color */
+    margin-right: 5px; /* Space between icon and text */
+}
+
+
+.price-quantity {
+    display: flex; /* Align items horizontally */
+    justify-content: space-between; /* Price to left, quantity to right */
+    align-items: center; /* Vertically align items */
+    margin: 10px 0; /* Optional spacing */
+    padding: 0 10px; /* Add padding for better layout */
+}
+
+.price {
+    font-size: 25px;
+    color: #c62828; 
+    margin: 0;
+}
+
+.quantity-control {
+    display: flex;
+    align-items: center;
+}
+
+.quantity-control button {
+    font-size: 18px;
+    padding: 10px;
+    border: none;
+    background-color: #c62828;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+}
+
+.quantity-control span {
+    margin: 0 10px;
+    font-size: 18px;
+}
+
+.description {
+    font-size: 18px;
+    color: #555;
+    margin: 10px 0;
+    text-align: center;
+}
+
+.add-to-cart {
+    width: 100%;
+    background-color: #c62828;
+    color: white;
+    border: none;
+    padding: 15px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.add-to-cart:hover {
+    background-color: #a11e1e;
+}
+
+/* Media Queries for Responsiveness */
+
+@media (max-width: 480px) {
+    .food-image {
+        width: 200px; 
+        height: 200px;
+    }
+
+    .food-card h3 {
+        font-size: 22px;
+    }
+
+    .price {
+        font-size: 20px;
+    }
+
+    .add-to-cart {
+        font-size: 14px;
+    }
+}
+
+/* Medium devices (tablets) */
+@media (max-width: 768px) {
+    .food-image {
+        width: 300px; /* Adjust image size for tablets */
+        height: 300px;
+    }
+
+    .food-card h3 {
+        font-size: 25px;
+    }
+}
+
+/* Large devices (desktops) */
+@media (min-width: 1024px) {
+    .food-image {
+        width: 400px; /* Restrict image size for large screens */
+        height: 400px;
+    }
+
+    .food-card h3 {
+        font-size: 30px;
+    }
+}
+
+    </style>
 </head>
 <body>
     <div class="app">
@@ -25,7 +236,7 @@
 
         <!-- Food Image -->
         <div class="image-container">
-            <img src="images/chicken-burger.png" alt="Chicken Burger" class="food-image">
+            <img src="images/chicken-burger.png" alt="Beef Burger" class="food-image">
         </div>
 
         <!-- Food Card -->
@@ -113,10 +324,11 @@
         });
         
         homeIconButton.addEventListener('click', () => {
-            window.location.href = "login-page.html";
+            window.location.href = "home.html";
         });
 
     </script>
 </body>
 </html>
+
 
