--- a/sosejCheese-page.html
+++ b/sosejCheese-page.html
@@ -112,7 +112,7 @@
         });
         
         homeIconButton.addEventListener('click', () => {
-            window.location.href = "home-page.html";
+            window.location.href = "home.html";
         });
 
     </script>
