--- a/specialChicken-page.html
+++ b/specialChicken-page.html
@@ -112,7 +112,7 @@
         });
         
         homeIconButton.addEventListener('click', () => {
-            window.location.href = "login-page.html";
+            window.location.href = "home.html";
         });
 
     </script>
