--- a/login-page.html
+++ b/login-page.html
@@ -121,7 +121,7 @@
         alert('Please fill in both fields.');
         return;
         }
-            window.location.href = "home-page.html";
+            window.location.href = "home.html";
         });
 
     </script>
