--- a/chat.html
+++ b/chat.html
@@ -10,15 +10,19 @@
 <body>
     <div class="chat-container">
         <div class="chat-header">
+          <button class="icon-button" id="homepage-icon">
+            <i class="fas fa-arrow-left back-icon"></i>  
+        </button>
             <img src="profilepicture.jpeg" alt="Profile Picture">
             <div>
                 <h3>Ayam gunting's owner</h3>
                 <span>Online</span>
             </div>
             <i class="fa fa-phone call-icon"></i>
+
         </div>
-        <div class="chat-messages" id="chat-messages">
-        </div>
+
+        <div class="chat-messages" id="chat-messages"></div>
 
         <div class="chat-footer">
             <i class="fa fa-plus add-icon"></i>
@@ -32,6 +36,7 @@
         const chatMessages = document.getElementById('chat-messages');
         const messageInput = document.getElementById('message-input');
         const sendButton = document.getElementById('send-button');
+        
 
         sendButton.addEventListener('click', () => {
             const messageText = messageInput.value.trim();
@@ -81,6 +86,10 @@
                 return 'Noted. Let me check.';
             }
         }
+        
+        homeIconButton.addEventListener('click', () => {
+            window.location.href = "http://127.0.0.1:5500/home.html";
+        });
     </script>
 </body>
 </html>
