--- a/chat.html
+++ b/chat.html
@@ -10,8 +10,8 @@
 <body>
     <div class="chat-container">
         <div class="chat-header">
-          <button class="icon-button" id="homepage-icon">
-            <i class="fas fa-arrow-left back-icon"></i>  
+            <button onclick="window.history.back()" class="back-btn">
+                <i class="fas fa-arrow-left"></i> 
         </button>
             <img src="profilepicture.jpeg" alt="Profile Picture">
             <div>
